[tool.poetry]
name = "blogsearch"
version = "0.0.1"
description = "Web app for running blog search api"
authors = ["David Ström <david.strom@callistaenterprise.se>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.2.3"
jsons = "^1.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
